# GAIN-GRN

./: .gitignore  001_adj.sse_lengths.tsv  001_adj.sse_stats.tsv  001_sse_lengths.tsv  001_sse_stats.tsv  3dalign.ipynb  CONTENTS.txt  DOCUMENTATION.rst  FAQ.rst  GUIDE.rst  PS50221.json  README.rst  README.txt  adj.sse_lengths.tsv  adj.sse_stats.tsv  analysis.ipynb  analysis_pkd.ipynb  anchor_info.py  anchor_stats.tsv  cancer_data.ipynb  default_indexed_8-13_gpcrdb.csv  default_indexed_all.8-13.csv  default_indexed_all.813.csv  domain_extents.json  execute.py  filter_collection.ipynb  fitting.py  gain_classes.py  gesamt2aln.ipynb  human_indexing_unique.g5.csv  indexing_classes.py  invertebrate_integration.ipynb  map_unknown.ipynb  pymoltest.py  pymoltest2.py  pyproject.toml  run_indexing.py  run_indexing_pkd.py  sse_func.py  sse_stats.tsv  (+21 more)
.ipynb_checkpoints/: analysis-checkpoint.ipynb  cancer_data-checkpoint.ipynb  filter_collection-checkpoint.ipynb  map_unknown-checkpoint.ipynb
data/: domain_extents.json  human_indexing.g5.csv  template_data.json
docs/: DOCUMENTATION.rst
gaingrn/: 0_filter_stage.ipynb  1_filter_stage.ipynb  2_template_selection.ipynb  3_assign_gaingrn.ipynb  3_template_curation.ipynb  4_analysis_stage.ipynb  4_assign_gaingrn.ipynb  4_gaingrn_statistics.ipynb  5_assign_gaingrn.ipynb  5_gaingrn_statistics.ipynb  6_cancer_analysis.ipynb  6_gaingrn_statistics.ipynb  7_cancer_analysis.ipynb  adj.sse_lengths.tsv  analysis.ipynb  analysis_pkd.ipynb  cancer_data.ipynb  dssp_analysis.ipynb  dynamic_gain_grn.ipynb  example_grn.py  gain_classes.py  indexing_classes.py  invertebrate_integration.ipynb  pkd_gain_processing.ipynb  run_indexing.py  run_indexing_pkd.py  stal_indexing.ipynb  stal_occ.ipynb  template_eval.ipynb  template_finder.py  template_picker.ipynb
src/: 1_filter_stage.ipynb  4_analysis_stage.ipynb  __init__.py  analysis.ipynb  analysis_pkd.ipynb  cancer_data.ipynb  colabfold_stage.ipynb  example_grn.py  execute.py  gain_classes.py  pkd_filter_collection.ipynb  run_indexing.py  run_indexing_pkd.py  sse_func.py  stal_indexing.ipynb  template_data.json  template_eval.ipynb  template_finder.py
test/: tests.py
(+56 files in other folders)
