[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GAIN-GRN"
version = "0.0.1"
authors = [
  { name="Florian Seufert", email="florian.seufert@medizin.uni-leipzig.de" },
]
description = "A generic numbering scheme for adhesion GPCR GAIN domains"

[project.readme]
readme = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/FloSeu/GAIN-GRN"
Issues = "https://github.com/FloSeu/GAIN-GRN/issues"

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: Unix/Linux",
]
dependencies = [
    "matplotlib>=3.7.1",
    "numpy",
    "pandas",
    "logomaker>=0.8",
    "nglview>=3.0.4",
    "scikit-learn>1.3.0",
    "scipy>=1.10.0",
    "setuptools>=61.0",
    "jupyter>=1.0.0",
    "ipython>=8.10.0",
    "biopython>=1.81"
]

