[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaingrn"
version = "0.0.1"
authors = [
  { name="Florian Seufert", email="florian.seufert@medizin.uni-leipzig.de" },
]
description = "A generic numbering scheme for adhesion GPCR GAIN domains"
readme = {file = "README.rst", content-type = "text/x-rst"}

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: Unix/Linux",
]
dependencies = [
    "matplotlib>=3.7.1",
    "numpy",
    "pandas",
    "logomaker>=0.8",
    "nglview>=3.0.4",
    "scikit-learn>1.3.0",
    "scipy>=1.10.0",
    "setuptools>=61.0",
    "jupyter>=1.0.0",
    "ipython>=8.10.0",
    "biopython>=1.81",
    "traitlets>=4.2.1",
    "ipywidgets==4.1.1",
    "notebook>=4.1.0"
]

[project.urls]
Homepage = "https://github.com/FloSeu/GAIN-GRN"
Dcoumentation = "https://github.com/FloSeu/GAIN-GRN/blob/main/GUIDE.rst"
Issues = "https://github.com/FloSeu/GAIN-GRN/issues"

[options]
packages = "gaingrn"
